tests/use_of_erroneous_untyped_numeral_binding/error.txt
Validation error: ./tests/use_of_erroneous_untyped_numeral_binding/use_of_erroneous_untyped_numeral_binding.fae:2
 Cannot create binding of untyped number
  2|     let a = 3
         ^^^^^^^^^
